--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 		<section class="todoapp">
 			<header class="header">
 				<h1>Tareas</h1>
-				<input class="new-todo" placeholder="¿Qué necesita ser hecho?" autofocus>
+				<input class="new-todo" placeholder="¿Qué tareas tiene pendientes ?" autofocus>
 			</header>
 			<!-- This section should be hidden by default and shown when there are todos -->
 			<section class="main">
@@ -39,7 +39,7 @@
 			<!-- This footer should hidden by default and shown when there are todos -->
 			<footer class="footer">
 				<!-- This should be `0 items left` by default -->
-				<span class="todo-count"><strong>0</strong> pendiente(s)</span>
+				<!-- <span class="todo-count"><strong>0</strong> pendiente(s)</span> -->
 				<!-- Remove this if you don't implement routing -->
 				<ul class="filters">
 					<li>
@@ -58,10 +58,7 @@
 		</section>
 		<footer class="info">
 
-			<p>Template creado por <a href="http://sindresorhus.com">Sindre Sorhus</a></p>
-			<!-- Change this out with your name and url ↓ -->
-			<p>Creado por <a href="http://todomvc.com">ti</a></p>
-			<p>Parte de <a href="http://todomvc.com">TodoMVC</a></p>
+			<p>Creado por <a href="https://github.com/devdnia">DevDnia</a></p>
 		</footer>
         
         
